--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -21,6 +21,21 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
 // Import partials:
+.container {
+  background-image: url("../../img/pirate-ship.jpg"); 
+  background-color: #cccccc; 
+  height: 500px; 
+  background-position: center; 
+  background-repeat: no-repeat;
+  background-size: cover; 
+  .emblema-one-regular {
+    font-family: "Emblema One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+  }
+}
 
 // Custom styles:
-
+.liveAlertPlaceholder {
+  padding: 100px 20px
+}
